9/29 finish the header

--- a/My_Web/home.html
+++ b/My_Web/home.html
@@ -38,7 +38,7 @@
   <body>
     <div class="wrap">
       <div class="wrap-top">
-        <a href="">
+        <a href="#">
           <img src="https://picsum.photos/120/50?random=1" alt="" />
         </a>
         <nav>
