--- a/My_Web/home.html
+++ b/My_Web/home.html
@@ -4,43 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>home</title>
   </head>
-  <style>
-    * {
-      margin: 0%;
-      padding: 0%;
-    }
-    .wrap-top {
-      display: flex;
-      background-color: rgb(0, 0, 0);
-    }
-    .wrap-top nav {
-      width: 100%;
-      text-align: right;
-      font-size: 0;
-    }
-    .wrap-top nav a {
-      display: inline-block;
-      color: #a6a6a6;
-      font-size: 18px;
-      font-family: sans-serif;
-      line-height: 52px;
-      text-decoration: none;
-      margin: 0 10px;
-      padding: 0px 10px;
-    }
-    .wrap-top nav a:hover {
-      background-color: rgba(74, 74, 74, 0.187);
-    }
-  </style>
 
   <body>
     <div class="wrap">
       <div class="wrap-top">
-        <a href="#">
-          <img src="https://picsum.photos/120/50?random=1" alt="" />
-        </a>
+        <a href="#"> DN-design </a>
         <nav>
           <a href="#">home</a>
           <a href="#">about</a>
