--- a/My_Web/home.html
+++ b/My_Web/home.html
@@ -61,7 +61,7 @@
           <p>這裡是我的網站</p>
           <p>你可以在這簡單的了解我</p>
         </div>
-        <div class="pageimg"><img src="/My_Web/Pic/selfpic.jpg" alt="" /></div>
+        <div class="pageimg"><img src="My_Web/Pic/selfpic.jpg" alt="" /></div>
       </div>
       <div class="warp-bottom"></div>
     </div>
