change the img path

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
           <p>你可以在這簡單的了解我</p>
         </div>
         <div class="pageimg">
-          <img src="My_Web/Pic/Selfpic.jpg" alt="none" />
+          <img src="Pic/Selfpic.jpg" alt="none" />
         </div>
       </div>
       <div class="warp-bottom"></div>
