--- a/404.html
+++ b/404.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="en">
+  <meta
+    http-equiv="refresh"
+    content="0;url=https://davidnine.github.io/DavidNine.io/home.html"
+  />
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
+</html>
