--- a/home.html
+++ b/home.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>home</title>
   </head>
   <body>
