--- a/home.html
+++ b/home.html
@@ -21,13 +21,35 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <title>home</title>
   </head>
   <body>
+    <div class="loding" id="loding">
+      <div id="myProgress">
+        <div id="myBar"></div>
+      </div>
+    </div>
+
+    <script>
+      var i = 0;
+      if (i == 0) {
+        i = 1;
+        var elem = document.getElementById("myBar");
+        var width = 1;
+        var id = setInterval(frame, 10);
+        function frame() {
+          if (width >= 100) {
+            clearInterval(id);
+            i = 0;
+          } else {
+            width++;
+            elem.style.width = width + "%";
+            document.getElementById("loding").style.opacity =
+              (100 - width) / 100;
+          }
+        }
+      }
+    </script>
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
