update some info to the about

--- a/about.html
+++ b/about.html
@@ -71,14 +71,17 @@
       </div>
       <div class="wrap-center">
         <div class="Pageimg">
-          <img src="PIC/Selfpic.jpg" alt="none" />
+          <img src="PIC/ContestProve.jpg" alt="none" />
         </div>
         <div class="Pagetext">
           <h1>學習經歷</h1>
           <p>
             畢業於台南二中<br />
+            在高中參加資訊研究社<br />
+            並在資訊學科能力競賽中取得佳作<br />
             大學一年級就讀於東海大學<br />
             大二轉學至元智大學就讀<br />
+            並參加CPE測驗成功解出4題
           </p>
         </div>
       </div>
