--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         <nav>
           <a href="home.html">Home</a>
           <a href="#">About</a>
-          <a href="#">Works</a>
+          <a href="Works/works.html">Works</a>
           <a href="#">Contact me</a>
         </nav>
       </div>
@@ -59,10 +59,9 @@
         <div class="Pagetext">
           <h1>簡介</h1>
           <p>
-            你好，我是阿九<br />
-            是元智大學資工系的學生<br />
-            平時喜歡在家和朋友線上打遊戲<br />
-            也喜歡騎車去看風景
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Consequatur quaerat qui, consectetur dolorem iure facilis veniam
+            nihil voluptates ab maiores?
           </p>
         </div>
         <div class="Pageimg">
@@ -76,12 +75,10 @@
         <div class="Pagetext">
           <h1>學習經歷</h1>
           <p>
-            畢業於台南二中<br />
-            在高中參加資訊研究社<br />
-            並在資訊學科能力競賽中取得佳作<br />
-            大學一年級就讀於東海大學<br />
-            大二轉學至元智大學就讀<br />
-            並參加CPE測驗成功解出4題
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+            accusamus, quas qui suscipit laboriosam culpa delectus a deleniti
+            aut sit?Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Odio, cum.
           </p>
         </div>
       </div>
