--- a/home.html
+++ b/home.html
@@ -51,15 +51,17 @@
         <nav>
           <a href="#">Home</a>
           <a href="about.html">About</a>
-          <a href="#">Works</a>
+          <a href="Works/works.html">Works</a>
           <a href="#">Contact me</a>
         </nav>
       </div>
       <div class="wrap-center">
         <div class="pagetext">
-          <p>我是阿九</p>
-          <p>這裡是我的網站</p>
-          <p>你可以在這簡單的了解我</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Lorem ipsum dolor sit amet.</p>
         </div>
         <div class="pageimg">
           <img src="PIC/Selfpic.jpg" alt="none" />
