--- a/Works/works.html
+++ b/Works/works.html
@@ -6,6 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="slideshow.css" />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -33,8 +50,8 @@
         </a>
       </div>
       <nav>
-        <a href="/home.html">Home</a>
-        <a href="/about.html">About</a>
+        <a href="https://davidnine.github.io/DavidNine.io/home.html#">Home</a>
+        <a href="https://davidnine.github.io/DavidNine.io/about.html">About</a>
         <a href="#">Works</a>
         <a href="#">Contact me</a>
       </nav>
@@ -51,26 +68,26 @@
         margin: 18px 0;
       "
     >
-      <span>Practice：slideshow</span>
+      <span>Practice:slideshow</span>
     </div>
     <div class="slideshow-container">
       <!-- Full width images with number and caption text -->
 
       <div class="mySlides fade">
         <div class="numbertext">1/3</div>
-        <img src="/PIC/img1.jpg" alt="" style="width: 100%" />
+        <img src="/PIC/Img1.jpg" alt="" style="width: 100%" />
         <div class="cpationtext">caption text</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">2/3</div>
-        <img src="/PIC/img2.jpg" alt="" style="width: 100%" />
+        <img src="/PIC/Img2.jpg" alt="" style="width: 100%" />
         <div class="cpationtext">caption two</div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3/3</div>
-        <img src="/PIC/img3.jpg" alt="" style="width: 100%" />
+        <img src="/PIC/Img3.jpg" alt="" style="width: 100%" />
         <div class="cpationtext">caption three</div>
       </div>
 
