change the path

--- a/Works/works.html
+++ b/Works/works.html
@@ -48,8 +48,8 @@
         </a>
       </div>
       <nav>
-        <a href="https://davidnine.github.io/DavidNine.io/home.html#">Home</a>
-        <a href="https://davidnine.github.io/DavidNine.io/about.html">About</a>
+        <a href="/home.html">Home</a>
+        <a href="/about.html">About</a>
         <a href="#">Works</a>
         <a href="#">Contact me</a>
       </nav>
