--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
         <nav>
           <a href="#">Home</a>
           <a href="about.html">About</a>
-          <a href="Works/works.html">Works</a>
+          <a href="works.html">Works</a>
           <a href="#">Contact me</a>
         </nav>
       </div>
