--- a/works.html
+++ b/works.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="WrapSetting.css" />
     <link rel="stylesheet" href="slideshow.css" />
     <link rel="stylesheet" href="SearchMenu.css" />
     <link rel="stylesheet" href="AnimationalIcon.css" />
@@ -28,32 +29,13 @@
   <body>
     <div class="wrap-top">
       <div class="logo">
-        <a href="#"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-brand-github"
-            width="44"
-            height="44"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="#9e9e9e"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-            <path
-              d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-            />
-          </svg>
-          DN-design
-        </a>
+        <a href="#"> DN-design </a>
       </div>
       <nav>
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="#">Works</a>
-        <a href="#">Contact me</a>
+        <a href="contact.html">Contact me</a>
       </nav>
     </div>
     <!--SlideShow container-->
