--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
+    <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="WrapSetting.css" />
     <link rel="stylesheet" href="reset.css" />
 
@@ -23,7 +29,15 @@
           <a href="#">Contact me</a>
         </nav>
       </div>
-      <div class="wrap-center"></div>
+      <div class="wrap-center">
+        <div class="wraper_h1">
+          <h1 class="ContactMe">Contact me</h1>
+        </div>
+        <div class="wraper_mail">
+          <span class="material-symbols-outlined mail"> mail </span>
+          <p class="mailAccount">acut74569@gmail.com</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
