update the sellpage

--- a/works.html
+++ b/works.html
@@ -47,7 +47,7 @@
       </div>
       <div class="SearchMenu" id="SearchMenu">
         <ul>
-          <li><a href="#">slideshow</a></li>
+          <li><a href="SellPage.html">SellPage</a></li>
           <li><a href="#">slideshow</a></li>
           <li><a href="#">slideshow</a></li>
           <li><a href="#">slideshow</a></li>
