redesign the home

--- a/about.html
+++ b/about.html
@@ -38,6 +38,8 @@
           <a href="contact.html">Contact me</a>
         </nav>
       </div>
+      <div class="line"></div>
+
       <div class="wrap-center">
         <div class="Pagetext">
           <h1>簡介</h1>
