--- a/home.html
+++ b/home.html
@@ -26,10 +26,20 @@
     <title>home</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="wave one"></div>
+      <div class="wave two"></div>
+      <div class="wave three"></div>
+    </div>
+    <div class="wrapper two">
+      <div class="waveLeft one"></div>
+      <div class="waveLeft two"></div>
+      <div class="waveLeft three"></div>
+    </div>
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
-          <a href="#"> DN-design </a>
+          <a href="#"> 久坐設計 </a>
         </div>
         <nav>
           <a href="#">Home</a>
@@ -38,16 +48,13 @@
           <a href="contact.html">Contact me</a>
         </nav>
       </div>
+      <div class="line"></div>
       <div class="wrap-center">
         <div class="pagetext">
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="pageimg">
-          <img src="PIC/Selfpic.jpg" alt="none" />
+          <p>
+            嗨～這裡是阿九的網站<br />
+            你可以在這裡簡單的了解我
+          </p>
         </div>
       </div>
       <div class="warp-bottom"></div>
