--- a/about.html
+++ b/about.html
@@ -25,11 +25,12 @@
     />
     <title>Document</title>
   </head>
+
   <body>
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
-          <a href="#"> DN-design </a>
+          <a href="#"> 久坐設計 </a>
         </div>
         <nav>
           <a href="home.html">Home</a>
@@ -41,30 +42,33 @@
       <div class="line"></div>
 
       <div class="wrap-center">
-        <div class="Pagetext">
-          <h1>簡介</h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consequatur quaerat qui, consectetur dolorem iure facilis veniam
-            nihil voluptates ab maiores?
-          </p>
-        </div>
         <div class="Pageimg">
           <img src="PIC/Selfpic.jpg" alt="none" />
         </div>
-      </div>
-      <div class="wrap-center">
-        <div class="Pageimg">
-          <img src="PIC/ContestProve.jpg" alt="none" />
-        </div>
         <div class="Pagetext">
-          <h1>學習經歷</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-            accusamus, quas qui suscipit laboriosam culpa delectus a deleniti
-            aut sit?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Odio, cum.
-          </p>
+          <h1>關於我</h1>
+          <ul>
+            <li>元智大學</li>
+            <li>資工系三年級</li>
+          </ul>
+        </div>
+      </div>
+      <div class="line"></div>
+      <div class="wrap-centertwo">
+        <p>
+          我叫王冠諺 <br />
+          也可以叫我阿九<br />
+          目前就讀於元智大學資工系三年級<br />
+          正在學習C++以及前端的語言<br />
+          <br />
+          久坐設計是我和女朋友共同創作的<br />
+          夢想是在未來以「久坐設計」為名<br />
+          創辦屬於我們的網頁設計品牌
+        </p>
+        <div class="wrapper">
+          <div class="wave one"></div>
+          <div class="wave two"></div>
+          <div class="wave three"></div>
         </div>
       </div>
       <div class="warp-bottom"></div>
