--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
-          <a href="home.html">DN-design</a>
+          <a href="home.html">久坐設計</a>
         </div>
         <nav>
           <a href="home.html">Home</a>
@@ -29,6 +29,7 @@
           <a href="#">Contact me</a>
         </nav>
       </div>
+      <div class="line"></div>
       <div class="wrap-center">
         <div class="wraper_h1">
           <h1 class="ContactMe">Contact me</h1>
