--- a/home.html
+++ b/home.html
@@ -26,12 +26,12 @@
     <title>home</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper RWDwrapper1">
       <div class="wave one"></div>
       <div class="wave two"></div>
       <div class="wave three"></div>
     </div>
-    <div class="wrapper two">
+    <div class="wrapper two RWDwrapper2">
       <div class="waveLeft one"></div>
       <div class="waveLeft two"></div>
       <div class="waveLeft three"></div>
@@ -39,7 +39,7 @@
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
-          <a href="#"> 久坐設計 </a>
+          <a href="#">久坐設計 </a>
         </div>
         <nav>
           <a href="#">Home</a>
@@ -52,8 +52,8 @@
       <div class="wrap-center">
         <div class="pagetext">
           <p>
-            嗨～這裡是阿九的網站<br />
-            你可以在這裡簡單的了解我
+            長時間的思考<br />
+            才能做出完美的作品
           </p>
         </div>
       </div>
