--- a/works.html
+++ b/works.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="slideshow.css" />
     <link rel="stylesheet" href="SearchMenu.css" />
     <link rel="stylesheet" href="AnimationalIcon.css" />
+    <link rel="stylesheet" href="works.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -38,6 +39,7 @@
         <a href="contact.html">Contact me</a>
       </nav>
     </div>
+    <div class="line"></div>
     <!--SlideShow container-->
     <div class="wrap-center">
       <div class="Bar-container" onclick="myFunction(this)">
