--- a/about.html
+++ b/about.html
@@ -46,10 +46,17 @@
           <img src="PIC/Selfpic.jpg" alt="none" />
         </div>
         <div class="Pagetext">
-          <h1>關於我</h1>
+          <h1>About me</h1>
           <ul>
-            <li>元智大學</li>
-            <li>資工系三年級</li>
+            <li>YZU university</li>
+            <li>CSIE</li>
+          </ul>
+          <h1>SKILL</h1>
+          <ul>
+            <li>Git</li>
+            <li>C/C++</li>
+            <li>HTML/CSS</li>
+            <li>Javascript</li>
           </ul>
         </div>
       </div>
