--- a/works.html
+++ b/works.html
@@ -50,15 +50,12 @@
       <div class="SearchMenu" id="SearchMenu">
         <ul>
           <li><a href="SellPage.html">SellPage</a></li>
-          <li><a href="#">slideshow</a></li>
+          <li><a href="Works/profile.html">Profile</a></li>
           <li><a href="#">slideshow</a></li>
           <li><a href="#">slideshow</a></li>
           <li><a href="#">slideshow</a></li>
           <li><a href="#">slideshow</a></li>
         </ul>
-      </div>
-      <div class="intro">
-        <span>Practice:slideshow</span>
       </div>
       <div class="slideshow-container">
         <!-- Full width images with number and caption text -->
