change the contact

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
-          <a href="#"> 久坐設計 </a>
+          <a href="home.html"> 久坐設計 </a>
         </div>
         <nav>
           <a href="home.html">Home</a>
