--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="WrapSetting.css" />
     <link rel="stylesheet" href="reset.css" />
@@ -30,13 +33,30 @@
         </nav>
       </div>
       <div class="line"></div>
-      <div class="wrap-center">
-        <div class="wraper_h1">
-          <h1 class="ContactMe">Contact me</h1>
+      <div class="ContactInfoWrap">
+        <div class="Contacttext">
+          <p>Contact with me</p>
         </div>
-        <div class="wraper_mail">
-          <span class="material-symbols-outlined mail"> mail </span>
-          <p class="mailAccount">acut74569@gmail.com</p>
+        <div class="IconWrap">
+          <div class="wraper_mail">
+            <span class="material-symbols-outlined mail">
+              <a href="mailto:acut74569@gmail.com">mail</a>
+            </span>
+          </div>
+          <div class="Instagramwrap">
+            <a
+              class="fa fa-instagram InstagramIcon"
+              href="https://www.instagram.com/_guanyan.1211/?hl=zh-tw"
+              target="_blank"
+            ></a>
+          </div>
+          <div class="FacebookWrap">
+            <a
+              class="fa fa-facebook FacebookIcon"
+              href="https://www.facebook.com/profile.php?id=100005026752772"
+              target="_blank"
+            ></a>
+          </div>
         </div>
       </div>
     </div>
