--- a/works.html
+++ b/works.html
@@ -30,7 +30,7 @@
   <body>
     <div class="wrap-top">
       <div class="logo">
-        <a href="#"> DN-design </a>
+        <a href="home.html"> 久坐設計 </a>
       </div>
       <nav>
         <a href="home.html">Home</a>
@@ -51,10 +51,10 @@
         <ul>
           <li><a href="SellPage.html">SellPage</a></li>
           <li><a href="Works/profile.html">Profile</a></li>
-          <li><a href="#">slideshow</a></li>
-          <li><a href="#">slideshow</a></li>
-          <li><a href="#">slideshow</a></li>
-          <li><a href="#">slideshow</a></li>
+          <li><a href="#">Coming Soon</a></li>
+          <li><a href="#">Coming Soon</a></li>
+          <li><a href="#">Coming Soon</a></li>
+          <li><a href="#">Coming Soon</a></li>
         </ul>
       </div>
       <div class="slideshow-container">
@@ -88,6 +88,22 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
+      <div class="SellingPageBox">
+        <div class="ImgWrap SellingPage">
+          <a href="SellPage.html" target="_blank">
+            <img src="Works/PIC/SellingPage.jpg" alt="" />
+          </a>
+        </div>
+        <div class="ImgText"><p>simple selling page</p></div>
+      </div>
+      <div class="PorfileBox">
+        <div class="ImgWrap">
+          <a href="Works/profile.html" target="_blank">
+            <img src="Works/PIC/SmallPic_profile.jpg" alt="" />
+          </a>
+        </div>
+        <div class="ImgText"><p>My profile</p></div>
+      </div>
     </div>
   </body>
 
@@ -103,7 +119,7 @@
         x.style.marginLeft = "10vw";
       } else {
         document.getElementById("SearchMenu").style.marginLeft = "0vw";
-        x.style.marginLeft = "0vh";
+        x.style.marginLeft = "0vw";
         hide = 1 - hide;
       }
     }
