--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,0,0"
     />
     <link
       rel="stylesheet"
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="WrapSetting.css" />
     <link rel="stylesheet" href="reset.css" />
 
-    <title>Document</title>
+    <title>Contact</title>
   </head>
-  <body>
+  <body onload="typeWriter()">
     <div class="wrap">
       <div class="wrap-top">
         <div class="logo">
@@ -35,7 +35,7 @@
       <div class="line"></div>
       <div class="ContactInfoWrap">
         <div class="Contacttext">
-          <p>Contact with me</p>
+          <p id="typeword"></p>
         </div>
         <div class="IconWrap">
           <div class="wraper_mail">
@@ -60,5 +60,24 @@
         </div>
       </div>
     </div>
+    <div class="bottomwrap">
+      <div class="Copyrighttextwrap">
+        <p>Copyright © 2022 David Wang</p>
+      </div>
+    </div>
   </body>
 </html>
+
+<script>
+  var i = 0;
+  var text = "Contact with me";
+  var speed = 100;
+
+  function typeWriter() {
+    if (i < text.length) {
+      document.getElementById("typeword").innerHTML += text.charAt(i);
+      i++;
+      setTimeout(typeWriter, speed);
+    }
+  }
+</script>
