--- a/works.html
+++ b/works.html
@@ -57,37 +57,7 @@
           <li><a href="#">Coming Soon</a></li>
         </ul>
       </div>
-      <div class="slideshow-container">
-        <!-- Full width images with number and caption text -->
 
-        <div class="mySlides fade">
-          <div class="numbertext">1/3</div>
-          <img src="PIC/Img1.jpg" alt="" style="width: 100%" />
-          <div class="cpationtext">caption text</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">2/3</div>
-          <img src="PIC/Img2.jpg" alt="" style="width: 100%" />
-          <div class="cpationtext">caption two</div>
-        </div>
-
-        <div class="mySlides fade">
-          <div class="numbertext">3/3</div>
-          <img src="PIC/Img3.jpg" alt="" style="width: 100%" />
-          <div class="cpationtext">caption three</div>
-        </div>
-
-        <a class="prev" onclick="plusSlide(-1)"><</a>
-        <a class="next" onclick="plusSlide(1)">></a>
-      </div>
-
-      <br />
-      <div style="text-align: center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
-      </div>
       <div class="SellingPageBox">
         <div class="ImgWrap SellingPage">
           <a href="SellPage.html" target="_blank">
@@ -96,7 +66,7 @@
         </div>
         <div class="ImgText"><p>simple selling page</p></div>
       </div>
-      <div class="PorfileBox">
+      <div class="ProfileBox">
         <div class="ImgWrap">
           <a href="Works/profile.html" target="_blank">
             <img src="Works/PIC/SmallPic_profile.jpg" alt="" />
@@ -125,38 +95,5 @@
     }
 
     /*===================================================================*/
-    /*script for slideshow*/
-    let slideIndex = 1;
-    showSlides(slideIndex);
-
-    // Next/previous controls
-    function plusSlide(n) {
-      showSlides((slideIndex += n));
-    }
-
-    // Thumbnail image controls
-    function currentSlide(n) {
-      showSlides((slideIndex = n));
-    }
-
-    function showSlides(n) {
-      let i;
-      let slides = document.getElementsByClassName("mySlides");
-      let dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {
-        slideIndex = 1;
-      }
-      if (n < 1) {
-        slideIndex = slides.length;
-      }
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex - 1].style.display = "block";
-      dots[slideIndex - 1].className += " active";
-    }
   </script>
 </html>
